--- a/composer.json
+++ b/composer.json
@@ -19,16 +19,16 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/support": "^9.0",
-        "illuminate/database": "^9.0",
+        "illuminate/support": "^9.0|^10.0",
+        "illuminate/database": "^9.0|^10.0",
         "webpatser/laravel-countries": "^1.5",
         "webpatser/laravel-uuid": "^3.0|^4.0",
         "ext-json": "*"
     },
     "require-dev": {
         "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "^8.0|^9.0",
-        "orchestra/testbench": "^7.0",
+        "phpunit/phpunit": "^8.0|^9.0|^10.0",
+        "orchestra/testbench": "^7.0|^8.0",
         "doctrine/dbal": "^3.3.5"
     },
     "autoload": {
